--- a/config/database.yml
+++ b/config/database.yml
@@ -56,13 +56,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 # test:
-#   <<: *default
-#   database: ada-capstone-project_test
+  <<: *default
+  database: ada-capstone-project_test
 
-test:
-  adapter: postgresql
-  database: travis_ci_test
-  username: postgres
+# test:
+#   adapter: postgresql
+#   database: travis_ci_test
+#   username: postgres
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
