--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,12 @@
 /.bundle
 /db/support/drugbank.xml
 /db/support/diseasome_dump.json
+/db/support/dailymed_dump.json
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
