--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GMAPS_KEY: "AIzaSyD3KXpIV3sb7orBt9Fg6edW539Ysb9uiRU"
-OMIM_KEY: "47F11481134016F9E5D4B8307285E3005C68E7E7"
+GMAPS_KEY="AIzaSyDZ6xhBl7wgcaf7OpMPilS5P7y3BdZWVeo"
+OMIM_KEY="47F11481134016F9E5D4B8307285E3005C68E7E7"
