--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /db/support/drugbank.xml
 /db/support/diseasome_dump.json
 /db/support/dailymed_dump.json
+/db/support/us_geo_populated_place.csv
+/db/support/us_locations.json
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
