fixed small error in seeds and adjusted data for mumps and west nile

--- a/db/support/diseases_for_event.json
+++ b/db/support/diseases_for_event.json
@@ -25,7 +25,7 @@
   },
 
   "Mumps": {
-    "alternate_names": ["Epidemic Parotitides","Epidemic Parotitis","Infectious parotitis","Mumps parotitis"],
+    "alternate_names": ["Epidemic Parotitides","Epidemic Parotitis","Infectious parotitis","Mumps parotitis","Mumps without mention of complication"],
     "codes": ["D009107","10009300","N0000002055","240526004","36989005","C0026780"]
     }
   }
