--- a/config/database.yml
+++ b/config/database.yml
@@ -86,5 +86,5 @@ test:
 production:
   <<: *default
   database: ada-capstone-project_production
-  username: ubuntu
+  username: postgres
   password: <%= ENV['ADA-CAPSTONE-PROJECT_DATABASE_PASSWORD'] %>
