seeded deploy but still doesn't work

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 GMAPS_KEY="AIzaSyDZ6xhBl7wgcaf7OpMPilS5P7y3BdZWVeo"
 OMIM_KEY="47F11481134016F9E5D4B8307285E3005C68E7E7"
+
+AWSAccessKeyId="AKIAJX6W7TXXFCO7LNWA"
+AWSSecretKey="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"
+AWSBucketName="capstone-datafiles"
